Fixed weird alignment on UL

--- a/www/highlight.css
+++ b/www/highlight.css
@@ -26,7 +26,7 @@ code {
 /* Tweak navigation list styling */
 
 ul.toc {
-  padding-left: 0px;
+  /* padding-left: 0px; */
 }
 
 ul.toc .dropdown-header {
